syntax = "proto3";
package user;

service User {
    rpc SignupOtp(SignupOtpRequest) returns (SignupOtpResponse);
    rpc ResendOtp(ResendOtpRequest) returns (ResendOtpResponse);
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
    rpc LoginAdmin(LoginUserRequest) returns (LoginAdminResponse);
    rpc GoogleLoginUser(GoogleLoginUserRequest) returns (GoogleLoginUserResponse);
    rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse);
    rpc GetUsers(Empty) returns (GetUsersResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
    rpc AddWalletBalance(AddWalletBalanceRequest) returns (AddWalletBalanceResponse);
    rpc RazorpayPayment(RazorpayPaymentRequest) returns (RazorpayPaymentResponse);
}

message Empty {}
message RegisterUserRequest {
    string name = 1;
    string email = 2;   
    string phone = 3;
    string password = 4;
    string userImage= 5;
    string otp = 6;
}

message RegisterUserResponse {
     string message = 1;
    string name = 2;
    string token = 3;
    string _id = 4;
    string refreshToken = 5;
    string image = 6;
    string email = 7;
    string pbone = 8;
}
message GetUsersResponse {
    repeated UserMessage users = 1;
}
message UserMessage {
    string _id = 1;                 
    string name = 2;                
    string email = 3;               
    int64  mobile = 4;                       
    string userImage = 5;         
    string accountStatus = 6;      
    string createdAt = 7;        
    string updatedAt = 8;  
} 
message SignupOtpRequest {
    string email = 1;
    string name = 2;
}

message SignupOtpResponse {
    string message = 1;
}

message ResendOtpRequest {
    string email = 1;
}

message ResendOtpResponse {
    string message = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string message = 1;
    string _id = 2;
    string name = 3;
    string accessToken = 4;
    string refreshToken = 5;
    string image = 6;
    string email = 7;
    string phone = 8;
}
message LoginAdminResponse {
   string message = 1;
    string name = 2;
    string token = 3;
}


message GoogleLoginUserRequest {
    string google_token = 1;
}

message GoogleLoginUserResponse {
    string message = 1;
    string token = 2;
    string refresh_token = 3;
}

message VerifyUserRequest {
    string user_id = 1;
}

message VerifyUserResponse {
    string message = 1;
    bool verified = 2;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    string message = 1;
    string _id = 2;
    string name = 3;
    string email = 4;
    string mobile = 5;
    string userImage = 6;
}

message UpdateUserProfileRequest {
    string user_id = 1;
    string name = 2;
    string email = 3;
    string mobile = 4;
    string user_image = 5;
}

message UpdateUserProfileResponse {
    string message = 1;
    bool success = 2;
}

message ChangePasswordRequest {
    string user_id = 1;
    string old_password = 2;
    string new_password = 3;
}

message ChangePasswordResponse {
    string message = 1;
    bool success = 2;
}

message AddWalletBalanceRequest {
    string user_id = 1;
    double amount = 2;
}

message AddWalletBalanceResponse {
    string message = 1;
    double new_balance = 2;
}

message RazorpayPaymentRequest {
    string user_id = 1;
    string payment_id = 2;
    double amount = 3;
}

message RazorpayPaymentResponse {
    string message = 1;
    bool success = 2;
}

/*
 message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string mobile = 4;
    string user_image = 5;
    double wallet_balance = 6;
    repeated string events_hosted = 7;
    repeated string events_attended = 8;
    string account_status = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

*/
